# scotty-experiment

./: LICENSE  README.md  compositions.json  scotty-experiment.cabal  stack.yaml
src/: Composition.hs  ErrorHandling.hs  Main.hs  Playground.hs  Train.hs  User.hs  WagonCount.hs
