name:                scotty-experiment
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ohanhi/scotty-experiment#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scotty-experiment
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ErrorHandling
                       Composition
                       User
                       WagonCount

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       flow,
                       time,
                       scotty,
                       aeson,
                       http-types,
                       wai-extra,
                       req >= 2.0 && < 3
